syntax = 'proto3';

option go_package = './rooms';
option java_multiple_files = true;
option java_package = "com.github.eco_heroes.proto.rooms";
option java_outer_classname = "RoomsProto";

package ecoheroes;

import 'google/protobuf/empty.proto';

message RoomDataReply {
  string id = 1;
  repeated PlayerInRoomData players = 2;
  int32 playersLimit = 3;
  PlayerInRoomData me = 4;
}

message JoinRequest {
  string roomId = 1;
}

message RoomsListReply {
  repeated RoomDataReply rooms = 1;
}

message PlayerInRoomData {
  int32 number = 1;
}

service Rooms {
  rpc createAndJoin(google.protobuf.Empty) returns (RoomDataReply);
  rpc join(JoinRequest) returns (RoomDataReply);
  rpc fetch(google.protobuf.Empty) returns (RoomsListReply);
}